--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Mix\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "/home/mix/anaconda3/bin/python"
 }
